welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:2: error: Missing closing brace `}' assumed here
override def run() {getMotif()}
^Array1:2: error: expected start of definition
override def run() {getMotif()}
         ^Array1:4: error: expected class or object definition
def getMotif(){
^